--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -10,6 +10,16 @@
     "DurationInMinutes": 60
   },
 
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "zorcis127045@gmail.com",
+    "SenderName": "Sistema Bancario",
+    "UserName": "zorcis127045@gmail.com",
+    "Password": "yrva vade iscj tmni",
+    "EnableSsl": true
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
